<menu xmlns:ad="http://schemas.android.com/apk/res/android">
	<item
		ad:id="@+id/run"
		ad:title="@string/run_"
		ad:showAsAction="always"
		ad:icon="@drawable/ic_play_24"
		ad:alphabeticShortcut="r"
		ad:alphabeticModifiers="CTRL"/>
	<item
		ad:id="@+id/undo"
		ad:title="@string/undo"
		ad:showAsAction="always"
		ad:icon="@drawable/ic_undo_24"
		ad:alphabeticShortcut="z"
		ad:alphabeticModifiers="CTRL"/>
	<item
		ad:id="@+id/redo"
		ad:title="@string/redo"
		ad:showAsAction="ifRoom"
		ad:icon="@drawable/ic_redo_24"
		ad:alphabeticShortcut="z"
		ad:alphabeticModifiers="CTRL|SHIFT"/>
	<item
		ad:id="@+id/save"
		ad:title="@string/save"
		ad:alphabeticShortcut="s"
		ad:alphabeticModifiers="CTRL"/>
	<item
		ad:id="@+id/search"
		ad:title="@string/find"
		ad:alphabeticShortcut="f"
		ad:alphabeticModifiers="CTRL"/>
	<item
		ad:id="@+id/close"
		ad:title="@string/close"/>
	<item
		ad:enabled="false"
		ad:id="@+id/prj"
		ad:title="@string/prj_">
		<menu>
		<item
			ad:id="@+id/prj_attr"
			ad:title="@string/prj_attr"/>
		<item
			ad:id="@+id/prj_close"
			ad:title="@string/prj_close"/>
		</menu>
	</item>
	<item
		ad:id="@+id/settings"
		ad:title="@string/settings"/>
</menu>
