<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical">

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
        android:textColor="?android:attr/textColorPrimary"
		android:text="@string/prj_name"/>

	<EditText
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@id/newprj"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
        android:textColor="?android:attr/textColorPrimary"
		android:text="@string/template"/>

	<Spinner
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
        android:entries="@array/templates"
        android:id="@+id/prj_temp"/>

	<CheckBox
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/with_clangd"
        android:id="@+id/prj_cld"/>

	<CheckBox
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/with_format"
        android:id="@+id/prj_fmt"/>

</LinearLayout>

